--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 	<meta charset="UTF-8">
 	<title>Document</title>
 	<link rel="stylesheet" href="style.css">
-	<script src="script.js"></script>
+	
 </head>
 <body>
 	<div class="block">
-		<input type="text">
+		<input type="text" id="input">
 	</div>
 	<div class="block">
 		<button class="number top">C</button>
@@ -18,25 +18,26 @@
 		<button class="number">7</button>
 		<button class="number">8</button>
 		<button class="number">9</button>
-		<button class="number">/</button>
+		<button class="number" onclick="slash">/</button>
 	</div>
 	<div class="block">
 		<button class="number">4</button>
 		<button class="number">5</button>
 		<button class="number">6</button>
-		<button class="number">*</button>
+		<button class="number" onclick="star">*</button>
 	</div>
 	<div class="block">
 		<button class="number">1</button>
 		<button class="number">2</button>
 		<button class="number">3</button>
-		<button class="number">-</button>
+		<button class="number" onclick="minus">-</button>
 	</div>
 	<div class="block">
 		<button class="number">.</button>
 		<button class="number">0</button>
-		<button class="number">=</button>
-		<button class="number">+</button>
+		<button class="number" onclick="resultat">=</button>
+		<button class="number" onclick="plus">+</button>
 	</div>
+	<script src="script.js"></script>
 </body>
 </html>
