--- a/index.html
+++ b/index.html
@@ -1,43 +1,51 @@
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<meta charset="UTF-8">
-	<title>Document</title>
-	<link rel="stylesheet" href="style.css">
-	
+  <meta charset="UTF-8">
+  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<div class="block">
-		<input type="text" id="input">
-	</div>
-	<div class="block">
-		<button class="number top">C</button>
-		<button class="number top">delete</button>
-	</div>
-	<div class="block">
-		<button class="number">7</button>
-		<button class="number">8</button>
-		<button class="number">9</button>
-		<button class="number" onclick="slash">/</button>
-	</div>
-	<div class="block">
-		<button class="number">4</button>
-		<button class="number">5</button>
-		<button class="number">6</button>
-		<button class="number" onclick="star">*</button>
-	</div>
-	<div class="block">
-		<button class="number">1</button>
-		<button class="number">2</button>
-		<button class="number">3</button>
-		<button class="number" onclick="minus">-</button>
-	</div>
-	<div class="block">
-		<button class="number">.</button>
-		<button class="number">0</button>
-		<button class="number" onclick="resultat">=</button>
-		<button class="number" onclick="plus">+</button>
-	</div>
-	<script src="script.js"></script>
+  <div class="calc">
+    <div class="block input-block">
+      <div id="input">
+
+      </div>
+    </div>
+    <div class="numbers">
+      <div class="inner-numbers">
+        <div class="block">
+          <button class="numberC top-left" id="c">C</button>
+          <button class="numberDel top-right" id="delete">&larr;</button>
+        </div>
+        <div class="block">
+          <button class="number">7</button>
+          <button class="number">8</button>
+          <button class="number">9</button>
+          <button class="number">/</button>
+        </div>
+        <div class="block">
+          <button class="number">4</button>
+          <button class="number">5</button>
+          <button class="number">6</button>
+          <button class="number">*</button>
+        </div>
+        <div class="block">
+          <button class="number">1</button>
+          <button class="number">2</button>
+          <button class="number">3</button>
+          <button class="number">-</button>
+        </div>
+        <div class="block">
+          <button class="number">.</button>
+          <button class="number">0</button>
+          <button class="number" id="result">=</button>
+          <button class="number">+</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  <script src="script.js"></script>
 </body>
 </html>
