--- a/index.html
+++ b/index.html
@@ -5,9 +5,11 @@
   <meta charset="UTF-8">
   <title>Document</title>
   <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="animate.min.css">
 </head>
 <body>
   <div class="calc">
+	  <div id="hr"><a href="html.html"><hr><hr><hr></a></div>
     <div class="block input-block">
       <div id="input">
 
@@ -18,6 +20,8 @@
         <div class="block">
           <button class="numberC top-left" id="c">C</button>
           <button class="numberDel top-right" id="delete">&larr;</button>
+          <button class="number top-left">(</button>
+          <button class="number top-right">)</button>
         </div>
         <div class="block">
           <button class="number">7</button>
